<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/tableLayout"
    android:orientation="vertical">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnYourBadges"
        android:id="@+id/btnYourBadges"
        android:enabled="false"
        android:clickable="true"
        android:width="700dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAvailableBdg"
        android:id="@+id/btnAvailableBdg"
        android:enabled="false"
        android:width="700dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewUserName"
        android:id="@+id/txtViewUserName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true"
        android:textSize="15dp"
        android:layout_gravity="center_vertical"
        android:layout_span="1"
        android:visibility="visible"
        android:width="700dp"
        android:paddingTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTxtUserName"
        android:layout_marginLeft="10dp"
        android:inputType="textPersonName"
        android:layout_span="0"
        android:layout_column="0"
        android:visibility="visible"
        android:width="700dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtViewPassword"
        android:layout_gravity="center_vertical"
        android:textSize="15dp"
        android:paddingTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTxtPassword"
        android:layout_marginLeft="10dp"
        android:layout_span="2"
        android:inputType="textPassword"
        android:width="700dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="30dp"
        android:width="700dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to the Badge App!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/txtViewWelcome"
        android:visibility="invisible"
        android:layout_span="1"
        android:layout_column="0"
        android:width="700dp"
        android:layout_marginLeft="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="To start view your earned badges or begin collecting badges from available badges"
        android:id="@+id/txtViewHelp"
        android:visibility="invisible"
        android:paddingTop="10dp" />


</LinearLayout>
